# arcgis-parcel-crawler

./: .env  README.md  compose.override.yaml  compose.yaml  pyproject.toml
app/: config.py  models.py  parcel_request.py
backend/: Dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  config.py  db.py  main.py  model.py.old  models.py  nearby_parcel_request.py  parcel_request.py  prop.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20b69d79d99a_initial_migration.py  a5a5855e3448_initial_table.py
backend/scripts/: prestart.sh  test.sh
backend/tests/: conftest.py  test_db.py  test_parcel_request.py  test_schemas.py
notebooks/: Untitled.ipynb  vacant_lots_over_1_acre_within_5_miles.xlsx
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scripts/: backup_db.sh  restore_db.sh  test-local.sh
