[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[project.scripts]
fetch-parcels = "app.parcel_request:main"
