[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=9.0.3",
]
notebook = [
    "ipython>=9.13.0",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[project.scripts]
fetch-parcels = "app.parcel_request:main"
